<resources>
    <string name="app_name">nearseatest</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_notifications">Notifications</string>
    <string name="copyright_text">© Marvel 2023 - All rights reserved</string>
    <string name="title_loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="about_this_app">About this app</string>
    <string name="we_can_be_heroes">We can be heroes</string>
    <string name="paragraph1">Charismatic, agile, strong, united, passionate and with a lot of wisdom, we are all Heroes in our own way.</string>
    <string name="overview">Overview</string>
    <string name="paragraph2">In fact, what makes us heroes are not supernatural forces, but the small gestures and attitudes that help to improve the daily lives of all of us and those around us.\n Heroes from December 8th to 11th at Parque das Nações - Lisbon</string>
    <string name="search">Search</string>
    <string name="avengers">Avengers,</string>
    <string name="assemble">Assemble!</string>
    <string name="title_chardetail">Character Detail</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="stories">Stories</string>
    <string name="series">Series</string>
    <string name="na">N/A</string>
</resources>