<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_loading">

    <fragment
        android:id="@+id/navigation_loading"
        android:name="com.codechallenge.nearshoretest.ui.loading.LoadingFragment"
        android:label="@string/title_loading"
        tools:layout="@layout/fragment_loading">

        <action
            android:id="@+id/action_LoadingScreen_to_Home"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/navigation_loading"
            app:popUpToInclusive="true"/>

    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codechallenge.nearshoretest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_Home_to_CharDetail"
            app:destination="@+id/navigation_chardetail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.codechallenge.nearshoretest.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_chardetail"
        android:name="com.codechallenge.nearshoretest.ui.chardetail.CharDetailFragment"
        android:label="@string/title_chardetail"
        tools:layout="@layout/fragment_chardetail"/>
</navigation>